feat: show refunded categories and children in spending by category
